# xhec-mlops-2025-project

./: .gitignore  .pre-commit-config.yaml  Dockerfile.app  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt
.github/workflows/: ci.yaml
data/: abalone_clean.csv  model.pkl
notebooks/: eda.ipynb  modelling.ipynb
src/modelling/: deploy.py  main.py  predicting.py  preprocessing.py  train_flow.py  training.py  utils.py
src/web_service/: main.py  streamlit.py  utils.py
src/web_service/lib/: models.py
