# ===============================
# 🔧 Build System Configuration
# ===============================
[build-system]
# Use setuptools to build the project
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# ===============================
# 📦 Project Metadata
# ===============================
[project]
# Project name (should be unique in PyPI)
name = "xhec-mlops-project-student"

# Version number (update when releasing)
version = "0.0.1"

# Author information
authors = [
  { name = "DENG Dixin", email = "dylan.deng410@gmail.com" },
]

# Short project description
description = "X-HEC MLOps Project on Abalone age prediction model"

# Minimum Python version required
requires-python = ">=3.10"

# ===============================
# 🧩 Project Dependencies
# ===============================
dependencies = [
  # Core dependencies
  "pydantic>=2.0.0",        # Data validation and schema definition
  "pre-commit>=3.0.0",      # Pre-commit hooks for code quality
  "ruff>=0.1.0",            # Fast Python linter and formatter

  # Common data science libraries (recommended)
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "joblib>=1.3.0",
  "mlflow>=2.12.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "pyyaml>=6.0.0",
  "prefect>=2.14.0",
  "pytest>=7.0.0",
]
