[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xhec-mlops-project-student"
version = "0.0.1"
authors = [
  { name = "verkrst", email = "verakrstic002@gmail.com" },
  { name = "Shay0909", email = "Shaymaa.bakkass@gmail.com" },
  { name = "nandanasreeraj123", email = "nandanasreeraj@gmail.com" },
  { name = "magdalenajankowska", email = "magdalenaj1000@gmail.com" },
  { name = "Sheetal-12", email = "sheetal.popat@hec.edu" }
]
description = "X-HEC MLOps Project on Abalone age prediction model"
readme = "README.md"
requires-python = ">=3.10,<3.13"

# main runtime dependencies
dependencies = [
  "pandas>=2.1,<2.3",
  "numpy>=1.26,<3",
  "scikit-learn>=1.3,<1.6",
  "pyarrow>=14,<18",
  "fastapi>=0.103,<1",
  "uvicorn>=0.23,<0.39",
  "pydantic>=2.4,<3",
  "prefect>=3,<4",
  "loguru>=0.7,<1",
  "matplotlib>=3.10.7",
  "seaborn>=0.13.2",
  "mlflow>=3.5.1",
]

[dependency-groups]
dev = [
  "pre-commit>=3.7",
  "ruff>=0.5",
  "pytest>=8",
  "mypy>=1.11",
  "ipykernel>=7.0.1",
  "pip>=25.2",
]

[tool.setuptools.packages.find]
exclude = ["notebooks*", "data*", "assets*"]
