[project]
name = "xhec-mlops-project"

version = "0.0.1"

authors = [
  { name = "DENG Dixin", email = "dylan.deng410@gmail.com" },
]

description = "X-HEC MLOps Project on Abalone age prediction model"

requires-python = ">=3.10"

dependencies = [
  "seaborn==0.12.2",
  "scikit-learn==1.5.2",
  "ipykernel==6.25.2",
  "pandas==2.1.1",
  "loguru==0.7.2",
  "mlflow==2.7.1",
  "pydantic>=1,<2",
  "uvicorn==0.23.2",
  "fastapi==0.103.2",
  "prefect==2.13.7",
  "griffe<1.0.0",
  "setuptools==80.9.0",
  "gdown==5.2.0"
]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
  "pytest>=7.0.0",
  "pip-tools>=7.5.0",
  "pre-commit==4.2.0",
  "ruff>=0.12.11",
]

[tool.ruff]
line-length = 130
exclude = ["notebooks/"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["D", "ANN","E","W","F","N","Q","ARG","PTH",]
ignore = ["D417", "D100", "PD901", "N806", "N815", "N803", "ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
order-by-type = true
